# Haron

./: .gitignore  AGENTS.md  CLAUDE.md  PRIVACY_POLICY.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/vamp/haron/: ExampleInstrumentedTest.kt
app/src/full/: AndroidManifest.xml
app/src/full/java/com/vamp/haron/data/torrent/: TorrentStreamRepositoryImpl.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/textmate/: languages.json
app/src/main/cpp/: CMakeLists.txt  ext4_jni_bridge.c  pty.c
app/src/main/java/com/vamp/haron/: HaronApp.kt  MainActivity.kt
app/src/main/java/com/vamp/haron/common/audio/: Id3TagEditor.kt  (+3 more)
app/src/main/java/com/vamp/haron/di/: CastModule.kt  CloudModule.kt  DatabaseModule.kt  RepositoryModule.kt  SmbModule.kt  TorrentModule.kt  TransferModule.kt  WorkerModule.kt
app/src/main/java/com/vamp/haron/service/: CastMediaService.kt  FileIndexJobService.kt  FileIndexWorker.kt  FileOperationService.kt  PlaybackService.kt  ScreenMirrorService.kt  TorrentStreamService.kt  TransferService.kt  VlcPlayerAdapter.kt  WebDownloadService.kt
app/src/main/java/com/vamp/haron/widget/: FavoriteFoldersWidget.kt  FavoriteFoldersWidgetReceiver.kt
app/src/main/res/drawable/: ic_repeat_off.xml
app/src/main/res/layout/: widget_loading.xml
app/src/main/res/raw/: changelog.txt  features.txt
app/src/main/res/raw-ru/: changelog.txt  features.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: favorite_folders_widget_info.xml  usb_device_filter.xml
app/src/mini/: AndroidManifest.xml
app/src/mini/java/com/vamp/haron/service/: PlaybackService.kt  VlcPlayerAdapter.kt
app/src/notMini/java/com/vamp/haron/service/: PlaybackService.kt  VlcPlayerAdapter.kt
app/src/play/: AndroidManifest.xml
app/src/test/java/com/vamp/haron/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+426 files in other folders)
